rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-15.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
content:
  text: "template:template_key"
placeholders:
  placeholder1:
    content:
      en: en value of placeholder1
      nl: nl value of placeholder1
    placeholders: {}
  placeholder2:
    content:
      en: en version of placeholder2
      nl: nl version of placeholder2
    placeholders: {}

