rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-17.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
"example plain string with placeholders {placeholder1} and {placeholder2}."

