rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-18.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: "example plain string with placeholders {placeholder1} and {placeholder2}."
description: text
template_type: anything
group: text

