rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-19.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
content:
  other text: "example plain string with placeholders {placeholder1} and {placeholder2}."
  text: "example plain string with placeholders {placeholder1} and {placeholder2}."
placeholders:
  placeholder1:
    content:
      en: en value of placeholder1
      nl: nl value of placeholder1
    placeholders: {}
  placeholder2:
    content:
      en: en version of placeholder2
      nl: nl version of placeholder2
    placeholders: {}

