rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-2.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
- text
- other text
- "template:template_key"
- ~

