rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-20.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: ~
description: ~
template_type: list_of_strings
group: ~

