rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-21.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: "example plain string with placeholders {placeholder1} and {placeholder2}."
description: text
template_type: long_string
group: text

