rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-22.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: "template:template_key"
description: "template:template_key"
template_type: number
group: "template:template_key"

