rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-23.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: ~
description: ~
template_type: random_range
group: ~

